compiler-plugin/testData/diagnostics/newStationEntryUseCase.kt
// ENABLE_STATION_ENTRIES_BASELINE

<!DEPRECATED_CONTRIBUTES_INJECTOR!>@StationEntry<!>
class FooActivity : CommonActivity<Unit>()
